# loglooker

./: README.md  main.py  pyproject.toml
loglooker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
